--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -17,17 +17,13 @@
     /*background-size: 100% 75%;*/
     /*color: #fff;*/
     /*height: 500px;*/
-}.bannerContainer1{
+}
+.bannerContainer1{
   opacity: 1;
-  /*z-index: 110;*/
-  /*height: 500px;*/
   background-size: 100% 100% ;
-    width: 100%;
-  /*  margin-right: auto;*/
-    height: 43em;
-  /*  margin-left: auto;*/
-    /*float: left;*/
-    background-image: url(/images/Banner3_.png);
+  width: 100%;
+  height: 48em;
+  background-image: url(/images/Banner3_.png);
 
 }
 .bannerContainer {
@@ -859,7 +855,7 @@ height: 90px;
   /*z-index: 110;*/
   /*opacity: 0.9;*/
 }
-@media only screen (min-width: 1920px) {
+@media only screen (min-width: 1600px) {
   .bannerContainer1{
     height: 55em ! important;
   }
@@ -908,6 +904,9 @@ height: 90px;
 .oilimage{
   right: 27px;
   top: 62px;
+}
+.bannerContainer1{
+  height: 43em ! important;
 }
 .tabimage{
   width: 170px ! important;
@@ -2136,7 +2135,7 @@ div.drop-container:after {
   content: '';
   position: absolute;
   z-index: 221;
-  top: 24%;
+  top: -18%;
   right: 133%;
   transform: translate(50%) rotateX(100deg);
   border-radius: 100%;
@@ -2144,7 +2143,7 @@ div.drop-container:after {
   width: 130%;
   height: 43%;
   border: 5px solid skyblue;
-  animation: dripple 10s ease-out 1s;
+  animation: dripple 5s linear infinite;
 }
 
 div.drop-container:after {
