Karuna added changes

--- a/ui/website/src/allBlocks/Upstream/Upstream.css
+++ b/ui/website/src/allBlocks/Upstream/Upstream.css
@@ -237,6 +237,7 @@
     border: 1px solid #f19000;
     background-color: #f19000;
     margin-bottom: 12px;
+    margin-left: 587px;
 
 }
 .hrnewclassblog{
