--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -183,6 +183,7 @@ ul.no-icon-list {
 .subscribeBtn{
   border-radius: 0px;
   font-weight: 700;
+  color: #fff;
   background-color: #00317F;
 }
 .footeranimation{
