--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -829,8 +829,8 @@ height: 90px;
 
   .resbanner{
     background-image: url("/images/IOG_Banner_crop.png");
-    background-size: 100% 100%;
-    height: 250px;
+    background-size: contain;
+    /*height: 250px;*/
     background-repeat: no-repeat;
   } 
   .arrow-right {
