--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -35,16 +35,17 @@
     font-weight: 600;
     margin-top: 55px;
 }
+.B2T_serviceTitleNew{
+ background-color: #333 ! important;
+}
 .services_block{
   margin-top: 30px;
 }
 .B2T1_line1{
-  margin-left: 14px ! important;
+  margin-left: 491px ! important;
   background-color: #f08f00;
-    width: 90px;
-    height: 4px;
-    top: 36px;
-    /* left: 60px; */
-    /* position: absolute; */
-    z-index: 999;
+  width: 80px;
+  height: 4px;
+  top: 36px;
+  /*z-index: 999;*/
 }
