--- a/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
+++ b/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
@@ -5,8 +5,8 @@
     top: 25px;
     height: 190px;
     /*width: 303px;*/
-    box-shadow: 3px 6px 4px 2px #eee;
-    /*margin-left: 32px;*/
+    box-shadow: 0px 2px 2px 3px #eee;
+    /*margin-left: 40px;*/
     margin-bottom: 40px;
     
 }
@@ -35,4 +35,9 @@
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
+}
+@media only screen and (max-width : 768px){
+  .B4T_img{
+    margin-left: 0px;
+  }
 }
