--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -22,6 +22,16 @@
     right: 15px;
     color: #ffffff;
  }
+ .new_wizardNotefor4
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 31px;
+    right: 15px;
+    color: #ffffff;
+ }
  .new_wizardNote_for6
  {
     /* border: 1px solid; */
@@ -54,6 +64,23 @@
  }
 
  .new_round-tab {
+    width: 20px;
+    margin-left: 29%;
+    height: 20px;
+    line-height: 36px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #f1f1f1;
+    border: 2px solid #e0e0e0;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 18px;
+    color: #000;
+    /*top:44px;*/
+}
+.new_round-tabfor4 {
     width: 20px;
     margin-left: 29%;
     height: 20px;
@@ -200,6 +227,9 @@
     margin-left: 20px ! important;
 
   }
+  .new_wizardNote{
+    font-size: 11px;
+  }
   .serflip-card{
     width: 206px ! important;
   }
@@ -223,4 +253,31 @@
  .B2T_challengesTitle{
     margin-left: 90px;
  }
+ .BT4_imgBack{
+    margin-left: 66px;
+ }
+ .BT4_txt{
+    margin-left: 43px;
+ }
+ .new_round-tabfor4{
+    margin-left:127%;
+ }
+ .new_wizardNotefor4{
+    left:109px;
+ }
+ .adjustfor5{
+    margin-left: 17px;
+ }
+}
+@media only screen and (max-width : 600px){
+.BT4_imgBack{
+    margin-left: 102px;
+}
+.BT4_txt{
+    text-align: center;
+    margin-left: 0px;
+}
+.BT3_subhead{
+    margin-left: -11px;
+}
 }
