Karuna added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1,6 +1,6 @@
 body{
     overflow-x: hidden;
-    margin-top: -40px;
+    margin-top: 0px ! important;
 }
 .sharefacebook{
     padding-top: 150px;
