--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -52,7 +52,7 @@
     /* padding-bottom: 112px; */
     font-size: 15px;
     padding-left: 86px;
-    margin-top: 91px;
+    margin-top: 34px;
     margin-left: 106px;
     width: 94%;
     height: 294px;
@@ -80,7 +80,7 @@
     width: 107%;
     height: 362px;
     /*padding-top: 97px;*/
-    padding: 80px;
+    padding: 27px;
     /* margin-top: 82px; */
 }
 
@@ -138,7 +138,7 @@
     padding-top: 35px;
     font-size: 15px;
     /*padding-left: 39px;*/
-    margin-left: 25px;
+    /*margin-left: 25px;*/
     width: 100%;
     padding-bottom: 59px;
 }
