--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -440,4 +440,99 @@ body { top: 0px !important; }
 
 
 
+.ct-topbar {
+  text-align: right;
+  position: absolute;
+  right: 27px;
+  bottom: 68px;
+  /*background: #eee;*/
+}
+.ct-topbar__list {
+  margin-bottom: 0px;
+}
+.ct-language__dropdown{
+  padding-top: 8px;
+  max-height: 0;
+  /*overflow: hidden;*/
+  position: absolute;
+   -ms-transform: rotate(-90deg); /* IE 9 */
+  transform: rotate(-90deg);
+  top: -12%;
+  display: block;
+  right: 135px;
+ /* -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;*/
+  width: 35px;
+  text-align: center;
+  padding-top: 0;
+  z-index:200;
+}
+.ct-language__dropdown li{
+  background: transparent;
+  padding: 5px;
+}
+.ct-language__dropdown li a{
+  display: block;
+  color: #333;
+}
+.new_container{
+  width: 117px ! important;
+}
+.ct-language__dropdown li:first-child{
+  padding-top: 10px;
+  border-radius: 3px 3px 0 0;
+}
+.ct-language__dropdown li:last-child{
+  padding-bottom: 10px;
+  border-radius: 0 0 3px 3px;
+}
+.ct-language__dropdown li:hover{
+  /*background: #fff;*/
+}
+.ct-language__dropdown:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 8px;
+  height: 0;
+  border: 0 solid transparent;
+  border-right-width: 8px;
+  border-left-width: 8px;
+  border-bottom: 8px solid transparent;
+}
+.ct-language{
+  position: relative;
+  background: transparent;
+  color: #fff;
+  padding: 10px 0;
+}
+.ct-language:hover .ct-language__dropdown{
+/*  max-height: 200px;
+  padding-top: 8px;*/
+}
+.goog-te-gadget-icon{
+background:none !important;
+background-color: #eee ! important;
+border:1px solid #eee ! important;
+}
+.goog-te-gadget-simple{
+  background-color: #eee ! important;
+  border:none ! important;
+  bottom: 8px;
+  right: -50px;
+  position: absolute;
+
+}
+.language_icon{
+    position: absolute;
+    right: -12px;
+    top: 4px;
+    z-index: 3000;
+}
+
+
+
 
