--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -848,8 +848,8 @@ height: 90px;
   position: absolute;
   /*left: 968px;*/
   bottom: 0px;
-  right: 60px;
-  top: 142px;
+  right: 262px;
+  top: 153px;
   height: 168px;
   animation: slide-left 4s ;
   /*z-index: 110;*/
@@ -866,7 +866,7 @@ height: 90px;
     width: 300px ! important;
   }
   .plantimage1{
-    right: 712px ! important;
+    right: 320px ! important;
     top: 245px ! important;
   }
    .nexttogasimage{
@@ -906,7 +906,7 @@ height: 90px;
   width: 155px;
 }
 .nexttogasimg_size{
-  width: 200px;
+  width: 255px;
 
 }
 
@@ -991,18 +991,18 @@ height: 90px;
 }
 .gasimage{
   position: absolute;
-  right: 153px;
-  top: 469px;
+  right: 88px;
+  top: 282px;
   height: 168px;
- animation: slide-tl 4s;
+  animation: slide-tl 4s;
 
 }
 .nexttogasimage{
    position: absolute;
    animation: slide-top 4s;
    bottom: 0px;
-   right: 562px;
-   top: 469px;
+   right: 470px;
+   top: 261px;
    height: 168px;
 }
 .petrolimage{
@@ -1017,8 +1017,8 @@ height: 90px;
 }
 .petrolimage1{
   position: absolute;
-  right: 323px;
-  top: 352px;
+  right: 278px;
+  top: 383px;
   height: 221px;
   animation: slide-right 4s ;
    /*opacity: 0.7;*/
@@ -1027,8 +1027,8 @@ height: 90px;
 .plantimage1{
   position: absolute;
   bottom: 0px;
-  right: 493px;
-  top: 252px;
+  right: 262px;
+  top: 153px;
   height: 221px;
   animation: slide-bottom 4s ;
 
@@ -1036,12 +1036,11 @@ height: 90px;
 
 }
 .plantimage11{
-  position: absolute;
-  bottom: 0px;
-  right: 320px;
-  top: 188px;
-  height: 221px;
-  animation: slide-bottom 4s ;
+   position: absolute;
+  right: 88px;
+  top: 282px;
+  height: 168px;
+  animation: slide-tl 4s;
   /*opacity: 1;*/
 
 }
@@ -1092,6 +1091,7 @@ animation: fadeIn ease 20s;
   z-index: 120;
   
 }
+
 .scaleimage:hover{
   -ms-transform: scale(1.2); /* IE 9 */
   -webkit-transform: scale(1.2); /* Safari 3-8 */
@@ -1101,6 +1101,7 @@ animation: fadeIn ease 20s;
 .boat_img2:hover{
   z-index: 120;
 }
+
 .boat_img{
   position: absolute;
   bottom: 0px;
@@ -1115,8 +1116,8 @@ animation: fadeIn ease 20s;
 .boat_img2{
   position: absolute;
   bottom: 0px;
-  left: 297px;
-  top: 340px;
+  left: 361px;
+  top: 336px;
   height: 221px;
   animation: slide-br 4s ;
   /*z-index: 110;*/
@@ -1379,11 +1380,8 @@ animation: fadeIn ease 20s;
   opacity: 1;
 
 }
-.waterimg2:hover .new_HoverDiv6{
-   display: block ! important;
-   cursor: pointer;
-   opacity: 1;
-
+.waterimg2:hover {
+   
 }
 
 .onhoverimages{
@@ -1400,7 +1398,7 @@ animation: fadeIn ease 20s;
     padding-left: 10px;
     text-align: center;
     position: absolute;
-    width: 121px;
+    width: 112px;
 }
 .newhovertxt_again{
     top: 85px;
@@ -2490,8 +2488,8 @@ div.drop-container:after {
 }
 .flagdiv{
   padding:2px 2px 2px 2px;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
 }
 /*.goog-te-banner-frame{
   position: absolute ! important;
