--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -904,6 +904,9 @@ height: 90px;
 }
 .boat_img_size{
   width: 155px;
+  position: absolute;
+  left: 159px;
+  top: 90px;
 }
 .nexttogasimg_size{
   width: 255px;
@@ -1020,7 +1023,7 @@ height: 90px;
   right: 278px;
   top: 383px;
   height: 221px;
-  animation: slide-right 4s ;
+   animation: slide-top 4s;
    /*opacity: 0.7;*/
 
 }
@@ -1080,34 +1083,50 @@ animation: fadeIn ease 20s;
   position: absolute;
   bottom: 0px;
   left: 46px;
-  top: 225px;
+  top: 261px;
   height: 221px;
   animation: slide-right 4s ease-out;
   
   /*opacity:1;*/
   /*z-index: 110;*/
 }
-.waterimg:hover{
+/*.waterimg:hover{
   z-index: 120;
   
-}
+}*/
 
 .scaleimage:hover{
-  -ms-transform: scale(1.2); /* IE 9 */
-  -webkit-transform: scale(1.2); /* Safari 3-8 */
-  transform: scale(1.2); 
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1); 
+  transition: all 2s ease-in-out;
 
 }
 .boat_img2:hover{
   z-index: 120;
 }
+.boat_img2 :hover{
+/*  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1); 
+  transition: all 2s ease-in-out;*/
+
+}
+.boat_img2 :hover .waterimg2{
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1) ! important; 
+  transition: all 2s ease-in-out;
+
+}
 
 .boat_img{
   position: absolute;
   bottom: 0px;
-  left: 221px;
-  top: 147px;
-  height: 221px;
+  left: 97px;
+  top: 104px;
+  width: 304px;
+  height: 207px;
   animation: slide-br 4s
   /*z-index: 110;*/
   /*opacity:1;*/
@@ -1134,14 +1153,28 @@ animation: fadeIn ease 20s;
   /*opacity: 0.9;*/
 
 }
+.new_HoverDivforboat{
+   height: 275px;
+    width: 275px;
+    border-radius: 5px;
+    /*background-image: url(/images/newbanner_img14.png);*/
+    margin-left: -38px;
+    margin-top: -23px;
+    position: absolute;
+    background-size: 100% 100%;
+    animation: fadeIn ease 3s;
+    z-index: 110;
+    display: none;
+
+}
 .new_HoverDiv {
     display: none;
     height: 275px;
     width: 275px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
-    margin-left: -58px;
-    margin-top: -188px;
+    margin-left: -1px;
+    margin-top: -167px;
     position: absolute;
     background-size: 100% 100%;
     animation: fadeIn ease 3s;
@@ -1157,6 +1190,10 @@ animation: fadeIn ease 20s;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv2  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.new_HoverDivforboat  img {
     
        -webkit-animation: rotation 45s infinite linear;
 }
@@ -1205,7 +1242,7 @@ animation: fadeIn ease 20s;
   z-index: 110;
   /*opacity: 1;*/
 }
-.waterimg:hover .new_HoverDiv {
+/*.waterimg:hover .new_HoverDiv {
       display: block ! important;
       cursor: pointer;
       z-index: 140;
@@ -1213,7 +1250,7 @@ animation: fadeIn ease 20s;
 .waterimg:hover .hidepoweredby{
   display: none ! important;
 
-}
+}*/
 
 .boat_img2:hover .  {
       z-index: 110;
@@ -1223,6 +1260,7 @@ animation: fadeIn ease 20s;
      z-index: 110;
 }
 .nexttogasimage:hover{
+
   /*z-index: 110;*/
 
 }
@@ -1230,10 +1268,7 @@ animation: fadeIn ease 20s;
   z-index: 110;
 
 }
-.waterimg2:hover{
-  z-index: 110;
 
-}
 .hiddendiv {
   visibility: hidden ! important;
 }
@@ -1248,8 +1283,8 @@ animation: fadeIn ease 20s;
     width: 275px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
-    margin-left: 2px;
-    margin-top: -143px;
+    margin-left: -176px;
+    margin-top: -55px;
     position: absolute;
     animation: fadeIn ease 3s;
     background-size: 100% 100%;
@@ -1355,6 +1390,11 @@ animation: fadeIn ease 20s;
       cursor: pointer;
       opacity: 1;
 }
+/*.boat_img:hover .new_HoverDiv  {
+      display: block ! important;
+      cursor: pointer;
+      opacity: 1;
+}*/
 /*.plantimage1:hover .new_HoverDiv3  {
       display: block ! important;
       cursor: pointer;
@@ -1368,7 +1408,10 @@ animation: fadeIn ease 20s;
 }
 .nexttogasimage:hover{
   z-index: 120;
+
+  
 }
+
 .plantimage11:hover .new_HoverDiv4  {
       display: block ! important;
       cursor: pointer;
@@ -1379,9 +1422,6 @@ animation: fadeIn ease 20s;
    cursor: pointer;
   opacity: 1;
 
-}
-.waterimg2:hover {
-   
 }
 
 .onhoverimages{
@@ -1492,7 +1532,7 @@ animation: fadeIn ease 20s;
     position: absolute;
 }
 .servicekbtnarrow4 {
-    margin-left: 113px;
+    margin-left: 127px;
     color: #000;
     margin-top: -106px;
     font-size: 13px;
@@ -1795,10 +1835,10 @@ svg {
 #hidepoweredbyblack1{
  
 }
-.waterimg:hover .hidepoweredby{
+/*.waterimg:hover .hidepoweredby{
   background-color:#0f0f0fbf ! important;
 }
-
+*/
 
 .circle_wrapper {
   border-top-left-radius: 500px;
@@ -2184,10 +2224,10 @@ svg {
 }
 div.drop-container {
   position: absolute;
-  top: 0;
+  top: 718px;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 14px;
   margin: auto;
   height: 200px;
   width: 200px;
@@ -2233,8 +2273,8 @@ div.drop-container:after {
   content: '';
   position: absolute;
   z-index: 221;
-  top: -18%;
-  right: 133%;
+  top: 40%;
+  right: 103%;
   transform: translate(50%) rotateX(100deg);
   border-radius: 100%;
   opacity: 0;
