Karuna added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -2,6 +2,9 @@ body{
     overflow-x: hidden;
     margin-top: 0px ! important;
 }
+.expertiesdropdown : lang(fr){
+    color:red
+}
 .sharefacebook{
     padding-top: 150px;
 }
