--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -227,12 +227,12 @@
     text-decoration: none;
     font-size: 9px;
     font-weight: 700;
-    margin-top: 13px;
+    /*margin-top: 13px;*/
 }
 .dropdown .dropbtn {
     font-size: 9px;
     padding: 14px 2px;
-    margin-top: 12px;
+    /*margin-top: 12px;*/
     
 }
 .contactBarres{
