--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -1113,7 +1113,7 @@ animation: fadeIn ease 20s;
 .waterimg{
   position: absolute;
   bottom: 0px;
-  left: 46px;
+  left: 67px;
   top: 261px;
   height: 221px;
   animation: slide-right 4s ease-out;
@@ -1125,6 +1125,14 @@ animation: fadeIn ease 20s;
   z-index: 120;
   
 }*/
+.waterimg:hover #blackbannerDiv{
+  display: block;
+
+}
+.waterimg2:hover #blackbannerDiv{
+  display: block;
+
+}
 
 .scaleimage:hover{
   -ms-transform: scale(1.2);
