--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -87,7 +87,7 @@ margin-bottom: 50px;
   /*margin-top: 70px;*/
 } 
 .contacttextmargin2{
-  margin-top: 60px;
+  /*margin-top: 60px;*/
 } 
 .addonColor{
   background-color: #fff;
@@ -148,7 +148,7 @@ margin-bottom: 50px;
 }
 
 .contacticonwrap{
-  margin-top: 50px;
+  /*margin-top: 50px;*/
 }
 
 .contacticons{
