--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -93,7 +93,7 @@
 .serflip-card img{
   height: 130px;
   margin-bottom: 15px;
-  margin-left: 64px;
+  /*margin-left: 64px;*/
 }
 
 .serflip-card h2{
