--- a/ui/website/src/allBlocks/Resourcedownload/Resourcedownload.css
+++ b/ui/website/src/allBlocks/Resourcedownload/Resourcedownload.css
@@ -11,3 +11,30 @@
 		margin-left: 310px ! important;
 	}
 }
+.ContactmodalContent_brochure{
+	margin-top: 18%;
+    background: #fff;
+    border-radius: 04px;
+    border: none;
+    height: 430px;
+    z-index: 15000;
+
+}
+.contactHeader_brochure {
+    color: #fff;
+    background-color: #009de2;
+    font-size: 25px;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    background-color: ;
+}
+.brochureformBtn{
+    font-weight: 600;
+    padding: 10px 20px;
+    margin-top: 0px;
+    color: #fff;
+}
+.formcontent_new{
+	height: 70px;
+}
