--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -22,6 +22,16 @@
     right: 15px;
     color: #ffffff;
  }
+ .new_wizardNotefortwo
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 31px;
+    right: 83px;
+    color: #ffffff;
+ }
  .new_wizardNotefor4
  {
     /* border: 1px solid; */
@@ -66,6 +76,23 @@
  .new_round-tab {
     width: 20px;
     margin-left: 29%;
+    height: 20px;
+    line-height: 36px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #f1f1f1;
+    border: 2px solid #e0e0e0;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 18px;
+    color: #000;
+    /*top:44px;*/
+}
+ .new_round-tabforTwo  {
+    width: 20px;
+    margin-left: 18%;
     height: 20px;
     line-height: 36px;
     display: inline-block;
@@ -226,6 +253,12 @@
     .navigation_tab{
     margin-left: 20px ! important;
 
+  }
+  .new_round-tabforTwo{
+    margin-left: 98%;
+  }
+  .new_wizardNotefortwo{
+    right: -129px;
   }
   .new_wizardNote{
     font-size: 11px;
